<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/top_sheet_bg"
    android:padding="@dimen/_15sdp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_for"
        android:textSize="@dimen/_13sdp"
        android:fontFamily="@font/opensans_semibold"
        android:textColor="@color/black_60"/>

    <RadioGroup
        android:id="@+id/type_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp">

        <RadioButton
            android:id="@+id/radio_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/products"
            android:checked="true"
            android:textSize="@dimen/_11sdp"
            android:textColor="@color/black"
            android:includeFontPadding="false"
            android:fontFamily="@font/opensans_regular"
            android:buttonTint="@color/colorPrimary"/>

        <RadioButton
            android:id="@+id/radio_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brands"
            android:layout_marginTop="@dimen/_8sdp"
            android:checked="false"
            android:textSize="@dimen/_11sdp"
            android:textColor="@color/black"
            android:includeFontPadding="false"
            android:fontFamily="@font/opensans_regular"
            android:buttonTint="@color/colorPrimary"/>

        <RadioButton
            android:id="@+id/radio_shop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shops"
            android:checked="false"
            android:layout_marginTop="@dimen/_8sdp"
            android:textSize="@dimen/_11sdp"
            android:textColor="@color/black"
            android:includeFontPadding="false"
            android:fontFamily="@font/opensans_regular"
            android:buttonTint="@color/colorPrimary"/>

    </RadioGroup>

</LinearLayout>
