<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/_15sdp"
    android:background="@drawable/top_sheet_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_by_price"
        android:textSize="@dimen/_13sdp"
        android:fontFamily="@font/opensans_semibold"
        android:textColor="@color/black_60"/>

    <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
        android:id="@+id/crystal_range_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:bar_color="@color/text_grey"
        app:bar_highlight_color="@color/black"
        app:corner_radius="10"
        app:data_type="_integer"
        app:gap="1000"
        app:left_thumb_color="@color/colorAccent"
        app:left_thumb_color_pressed="@color/colorPrimary"
        app:max_value="@integer/maxPrice"
        app:min_value="@integer/minPrice"
        app:right_thumb_color="@color/colorAccent"
        app:right_thumb_color_pressed="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_min"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/min"
            android:gravity="center|start"
            android:textSize="@dimen/_8sdp"
            android:fontFamily="@font/opensans_semibold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/txt_max"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|end"
            android:text="@string/max"
            android:textSize="@dimen/_8sdp"
            android:fontFamily="@font/opensans_semibold"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_under_1k"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/under_1k"
            android:gravity="center"
            android:padding="@dimen/_3sdp"
            android:textSize="@dimen/_10sdp"
            android:background="@drawable/round_rect"
            android:fontFamily="@font/opensans_semibold"
            android:textColor="@color/black_60"/>

        <TextView
            android:id="@+id/txt_1k_2_10k"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="center"
            android:layout_marginStart="@dimen/_5sdp"
            android:padding="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:background="@drawable/round_rect"
            android:text="@string/from_1k_to_10k"
            android:textSize="@dimen/_10sdp"
            android:fontFamily="@font/opensans_semibold"
            android:textColor="@color/black_60"/>

        <TextView
            android:id="@+id/txt_above_10k"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:padding="@dimen/_3sdp"
            android:gravity="center"
            android:background="@drawable/round_rect"
            android:text="@string/above_10k"
            android:textSize="@dimen/_10sdp"
            android:fontFamily="@font/opensans_semibold"
            android:textColor="@color/black_60"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_weight="1">

            <TextView
                android:id="@+id/txt_clear_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_3sdp"
                android:paddingBottom="@dimen/_3sdp"
                android:text="@string/clear_filter"
                android:gravity="center"
                android:textSize="@dimen/_10sdp"
                android:fontFamily="@font/opensans_semibold"
                android:textColor="@color/red"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_weight="1">

            <TextView
                android:id="@+id/txt_apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_3sdp"
                android:paddingBottom="@dimen/_3sdp"
                android:paddingStart="@dimen/_11sdp"
                android:paddingEnd="@dimen/_11sdp"
                android:gravity="center"
                android:background="@drawable/rounded_rectangle"
                android:text="@string/apply"
                android:textSize="@dimen/_10sdp"
                android:fontFamily="@font/opensans_semibold"
                android:textColor="@color/white"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
