<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.b2gsoft.sailorsexpress.fragment.CartFragment">

    <RelativeLayout
        android:id="@+id/rel_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/lay_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="?android:attr/selectableItemBackgroundBorderless">

            <RelativeLayout
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_35sdp"
                android:elevation="20dp"
                android:background="@drawable/like_background1">

                <ImageView
                    android:id="@+id/ic_close"
                    android:layout_width="@dimen/_19sdp"
                    android:layout_height="@dimen/_17sdp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/header_arrow_left" />

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center">

            <TextView
                android:id="@+id/cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/opensans_semibold"
                android:text="@string/cart"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:id="@+id/txt_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cart"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-1dp"
                android:text="@string/no_items"
                android:fontFamily="@font/opensans_regular"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/_10sdp"/>

        </RelativeLayout>

        <ImageView
            android:id="@+id/ic_remove"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_centerInParent="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/_20sdp"
            android:src="@drawable/remove"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rel_checkout"
        android:layout_below="@id/rel_header"
        android:background="#F2F3F5">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_cart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_3sdp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_checkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:id="@+id/rel_coupon"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_13sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:background="@drawable/round_coupan">

            <ImageView
                android:id="@+id/img_coupon"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_8sdp"
                android:src="@drawable/coupon_icon" />

            <EditText
                android:id="@+id/et_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_toEndOf="@id/img_coupon"
                android:background="@null"
                android:fontFamily="@font/opensans_regular"
                android:hint="@string/coupon_code"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/light_grey"
                android:textSize="@dimen/_13sdp" />

            <View
                android:id="@+id/line"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/_50sdp"
                android:background="@color/light_grey" />

            <TextView
                android:id="@+id/txt_apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_10sdp"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/apply"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_subtotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rel_coupon"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/sub_total"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/_11sdp" />

            <TextView
                android:id="@+id/txt_subtotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/zero"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/_11sdp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rel_subtotal"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp">

            <TextView
                android:id="@+id/txt_delivery_charge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/delivery_charge"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/_11sdp" />

            <TextView
                android:id="@+id/txt_del_charge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/zero"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/_11sdp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_discount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rel_delivery"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp">

            <TextView
                android:id="@+id/txt_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/discount"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/_11sdp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/txt_discount_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/zero"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/_11sdp"
                android:visibility="visible" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rel_discount"
            android:layout_margin="@dimen/_8sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_semibold"
                android:text="@string/total"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:id="@+id/txt_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/opensans_semibold"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/proceed_checkout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_34sdp"
            android:layout_below="@+id/rel_total"
            android:layout_margin="@dimen/_8sdp"
            android:background="@drawable/rounded_rectangle_3"
            android:fontFamily="@font/opensans_semibold"
            android:gravity="center"
            android:text="@string/proceed_2_checkout"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

    </RelativeLayout>

</RelativeLayout>