<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F9"
    android:id="@+id/root_view"
    tools:context="com.b2gsoft.sailorsexpress.view.RegistrationActivityOne">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2">

            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:layout_gravity="start"
                android:background="@drawable/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/register"
                android:gravity="center|start"
                android:fontFamily="@font/opensans_bold"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_20sdp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/register_pg_one_desc"
                android:fontFamily="@font/opensans_regular"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/_12sdp"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:layout_weight="2">

            <RelativeLayout
                android:id="@+id/rel_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="18dp"
                android:background="@drawable/round_rect"
                android:gravity="center"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:paddingStart="@dimen/_15sdp">

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:background="@null"
                    android:fontFamily="@font/opensans_semibold"
                    android:gravity="start|center"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="#BEBEBE"
                    android:textSize="@dimen/_11sdp"
                    tools:ignore="RtlSymmetry" />

                <View
                    android:id="@+id/view1"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_below="@+id/et_phone"
                    android:layout_marginTop="@dimen/_minus5sdp"
                    android:background="#BEBEBE" />

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center"
            android:layout_weight="1.5">

            <TextView
                android:id="@+id/txt_send_otp"
                android:layout_width="@dimen/_140sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/rounded_rectangle"
                android:fontFamily="@font/opensans_bold"
                android:gravity="center"
                android:text="@string/send_otp"
                android:textAllCaps="true"
                android:textColor="@color/white" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
